Replaced generic placeholder text with unique content and fixed margin whitespace issue.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-body{
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 .header-text{
@@ -97,6 +99,8 @@ ul, a{
     height:auto;
     width: 300px;
 }
+
+
 .section2-header{
     font-size: 36px;
     font-weight: bolder;
@@ -107,9 +111,10 @@ ul, a{
 .subsection2{
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: baseline;
     gap: 40px; 
     padding: 0 100px;
+    font-size: 18px;
 }
 
 
